--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AnonymousQuotesV2</title>
+    <title>AnonymousQuotes v.2.0</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,28 @@
   </head>
 
   <body>
+
+    <header role="banner">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+    data-target="#bs-example-navbar-collapse-1">
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+            </button>
+           <%= link_to "Anonymous Quotes", root_path, class: "navbar-brand" %>
+          </div>
+        <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><%= link_to "Add new quote", new_quote_path %></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </header>
+
     <%= yield %>
   </body>
 </html>
