Add styling for navbar and new quote page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
            <%= link_to "Anonymous Quotes", root_path, class: "navbar-brand" %>
           </div>
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><%= link_to "Add new quote", new_quote_path %></li>
           </ul>
         </div>
