--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,46 +2,9 @@
 @import "bootstrap";
 
 body {
-  padding-top: 80px;
+  padding-top: 100px;
   background: #e1e1e1;
   color: #64103F;
-}
-
-// Navbar styling
-
-.navbar {
- background: #64103F;
- padding-bottom: 0px;
-}
-
-.navbar-default .navbar-brand {
-  padding-top: 25px;
-  font-size: 150%;
-  font-weight: bold;
-  color: #ffffff;
-}
-
-.navbar-default .navbar-brand:hover {
-  color: #ff0000;
-}
-
-.navbar-default {
-  border: #64103F;
-}
-
-.navbar-nav {
-  padding-top: 10px;
-  padding-right: 1px;
-}
-
-.navbar-default .navbar-nav li > a {
-  font-weight: bold;
-  font-size: 130%;
-  color: #ffffff;
-}
-
-.navbar-default .navbar-nav li > a:hover {
-  color: #ff0000;
 }
 
 // Form styling
@@ -50,11 +13,6 @@ body {
 }
 
 
-body {
-  padding-top: 80px;
-  background: #e1e1e1;
-  color: #64103F;
-}
 
 // Navbar styling
 .navbar {
@@ -91,8 +49,14 @@ body {
 .navbar-default .navbar-nav li > a:hover {
   color: #ff0000;
 }
+// Listing quotes styling
 
-// Form styling
-.page-heading, div > label {
+
+
+.quote-body {
+  font-size: 1.5em;
+  padding-left: 1.2em;
   color: #64103F;
+  text-align: center;
+
 }
