--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,11 +1,18 @@
-<% if @quotes.empty? %>
-  No quotes added
-<%else%>
-  <% @quotes.each do |quote| %>
-    <table>
-      <tr>
-        <%= quote.text %>
-      </tr>
-    </table>
-  <% end %>
-<%end%>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <% if @quotes.empty? %>
+        No quotes added
+      <%else%>
+        <% @quotes.each do |quote| %>
+          <div class="well well-lg">
+            <div class="quote-body">
+              <%= quote.text %>
+            </div>
+          </div>
+
+        <% end %>
+      <%end%>
+    </div>
+  </div>
+</div>
