--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,11 +1,11 @@
 <h3 class='text-center'>Adding New Quote</h3>
-  <div class='form-group'>
-    <div class='col-md-9'>
-      <%= simple_form_for(@quote, html: { class: 'form-vertical' }) do |f| %>
+  <%= simple_form_for(@quote, html: { class: 'form-vertical' }) do |f| %>
+    <div class='form-group'>
+      <div class='control-label col-md-9'>
         <div class='col-md-9'>
           <%= f.input :text, label: "New Quote", input_html: { class: 'form-control', rows: '5'}, placeholder: "Enter your quote here" %>
           <%= f.button :submit, "Save Quote", class: 'btn btn-success btn-lg' %>
         </div>
-      <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
