--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -13,7 +13,9 @@
 
         <% end %>
       <%end%>
-      <%= will_paginate @posts %>
+      <div class = 'flickr_pagination'>
+        <%= will_paginate @posts %>
+      </div>
     </div>
   </div>
 </div>
