--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           </div>
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><%= link_to "Add new quote", new_quote_path %></li>
+            <li class='btn btn-success btn-sm'><%= link_to "Add new quote", new_quote_path %></li>
           </ul>
         </div>
       </div>
