--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,13 +51,56 @@ body {
 }
 // Listing quotes styling
 
-
-
 .quote-body {
+  font-style: italic;
   font-size: 1.5em;
   padding-left: 1.2em;
   color: #64103F;
   text-align: center;
+
+}
+
+// Listing comments styling
+
+
+.quote-show {
+  font-size: 2em;
+  font-weight: bold;
+  font-style: italic;
+  padding-left: 1.2em;
+  color: #64103F;
+  text-align: center;
+
+}
+
+.user-name {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #64103F;
+  text-align: left;
+  display: inline-block
+
+}
+
+.comment-body {
+  font-size: 1.2em;
+  font-weight: normal;
+  color: #64103F;
+  text-align: left;
+  display: inline-block
+
+}
+
+.panel-head {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #64103F;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  padding: 0.5em;
+  text-align: center;
+
+
 
 }
 
