--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,23 +1,37 @@
-<div class="well well-lg">
-  <div class="quote-body">
-    <%= @quote.text %>
-  </div>
-
-  <% if @quote.comments.empty? %>
-    No comments added
-  <% else %>
-    <% @quote.comments.each do |comment| %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
       <div class="well well-lg">
-        <%= "#{comment.user}: " %>
-        <small><%= comment.body %></small>
+        <div class="quote-show">
+          <%= @quote.text %>
+        </div>
       </div>
-    <% end %>
-  <% end %>
+
+        <% if @quote.comments.empty? %>
+          No comments added
+        <% else %>
+          <% @quote.comments.each do |comment| %>
+            <div class="well well-sm">
+              <div class ='user-name'>
+                <%= "#{comment.user}: " %>
+              </div>
+              <div class = "comment-body">
+                <%= comment.body %>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+
+        <div class="panel panel-default">
+          <div class="panel-head">Add new comment</div>
+          <div class="panel-body">
+            <%= simple_form_for ([@quote, @quote.comments.build]) do |f| %>
+              <%= f.input :user, label: "Name", placeholder: "Enter your name" %>
+              <%= f.input :body, label: "Comment",  input_html: { class: 'form-control', rows: '5'}, placeholder: "Enter your comment here" %>
+              <%= f.button :submit, "Add comment", class: 'btn btn-success btn-md' %>
+            <% end %>
+          </div>
+        </div>
+    </div>
+  </div>
 </div>
-
-
-    <%= simple_form_for ([@quote, @quote.comments.build]) do |f| %>
-      <%= f.input :user %>
-      <%= f.input :body %>
-      <%= f.button :submit %>
-    <% end %>
