--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,36 +10,7 @@
   </head>
 
   <body>
-
-    <header role="banner">
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-    data-target="#bs-example-navbar-collapse-1">
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-            </button>
-           <%= link_to "Anonymous Quotes", root_path, class: "navbar-brand" %>
-          </div>
-        <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li class='btn btn-success btn-sm'><%= link_to "Add new quote", new_quote_path %></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    </header>
-    <div class='form-group'>
-      <div class='col-md-12'>
-        <% flash.each do |key, message| %>
-          <div class="text-center alert alert-<%= key == 'notice'? 'success': 'danger' %>">
-            <%= message %>
-          </div>
-        <% end %>
-        <%= yield %>
-      </div>
-    </div>
+    <%= render 'shared/header' %>
+    <%= render 'shared/main' %>
   </body>
 </html>
